--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "url": "https://github.com/DiogoCastroSilva/eslint-config/issues"
   },
   "homepage": "https://github.com/DiogoCastroSilva/eslint-config#readme",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/@diogocastrosilva"
+  },
   "dependencies": {
     "@typescript-eslint/parser": "^5.3.1"
   },
