--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@diogocastrosilva/eslint-config",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "repository": {
@@ -20,7 +20,8 @@
     "registry": "https://npm.pkg.github.com/"
   },
   "dependencies": {
-    "@typescript-eslint/parser": "^5.3.1"
+    "@typescript-eslint/parser": "^5.3.1",
+    "eslint-config-prettier": "^8.3.0"
   },
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.3.1",
